# wasm-smtp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  TERMS_OF_USE.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/cloudflare/: Cargo.toml
crates/cloudflare/src/: adapter.rs  integration.rs  lib.rs  socket.rs  tests.rs
crates/cloudflare/src/tests/: e2e_via_tokio_mock.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: client.rs  error.rs  lib.rs  protocol.rs  session.rs  tests.rs  transport.rs
crates/wasm-smtp/: Cargo.toml
crates/wasm-smtp-cloudflare/: Cargo.toml
crates/wasm-smtp-cloudflare/src/: lib.rs
crates/wasm-smtp-cloudflare/src/tests/: io_tests.rs  mod.rs
crates/wasm-smtp-tokio/: Cargo.toml
crates/wasm-smtp-tokio/src/: lib.rs  transport.rs
crates/wasm-smtp-tokio/src/tests/: connect_options_tests.rs  error_path_tests.rs  mod.rs
crates/wasm-smtp/src/: client.rs  error.rs  lib.rs  protocol.rs  scram.rs  session.rs  transport.rs
crates/wasm-smtp/src/tests/: client_tests.rs  error_tests.rs  harness.rs  mail_builder_tests.rs  mod.rs  protocol_tests.rs  scram_tests.rs  session_tests.rs  smtputf8_tests.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  cloudflare-adapter.md  composing-messages.md  connection-reuse.md  core.md  errors.md  examples.md  intro.md  protocol.md  tokio-adapter.md  usage.md
