[workspace]
resolver = "3"
members = ["crates/core", "crates/cloudflare"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen <nabbisen@scqr.net>"]
repository = "https://github.com/nabbisen/wasm-smtp"
homepage = "https://github.com/nabbisen/wasm-smtp"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
