[workspace]
resolver = "3"
members = ["crates/wasm-smtp", "crates/cloudflare", "crates/wasm-smtp-tokio"]

[workspace.package]
version = "0.7.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["nabbisen"]
repository = "https://github.com/nabbisen/wasm-smtp"
homepage = "https://github.com/nabbisen/wasm-smtp"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

# Workspace-wide dependency floors.
#
# Rationale: bare `version = "1"` lets cargo pick any 1.x release,
# including pre-RUSTSEC-2023-0001 1.x.y < 1.23.1 in adversarial
# resolution scenarios. This crate does not use the affected named-pipe
# API (we live on Cloudflare Workers, not Windows) and the lockfile
# already pins a current 1.x release, but a defensive floor in the
# manifest documents the intent, makes downstream lockfile bumps trivial,
# and protects against a clean checkout that for some reason resolves
# against an old index snapshot.
#
# The floors below are LTS / known-good releases comfortably newer than
# any patched advisory range. They are not pinned to exact versions —
# patch updates inside a minor still flow through `cargo update`.
[workspace.dependencies]
# tokio: floor = 1.38, the first 1.x LTS release with the named-pipe
# patches (RUSTSEC-2023-0001 fixed in >= 1.23.1) and the current set of
# `io-util` ergonomics this crate relies on. We do not enable
# `tokio/net` so the named-pipe issue is also out of reach by feature
# selection alone.
tokio = { version = "1.38", default-features = false }
# tokio-test: dev-only. floor = 0.4.3 (current MSRV-clean release).
tokio-test = "0.4.3"
# worker: Cloudflare Workers Rust SDK. The 0.8.x line is the current
# stable series; minor 0.x bumps are explicit decisions, not silent
# floor relaxations.
worker = "0.8"

# TLS stack used by `wasm-smtp-tokio`. We track tokio-rustls 0.26 (the
# rustls 0.23 line); both have been audited and have current security
# fixes. rustls-pki-types and the optional trust-anchor crates pair
# with that line. Like the tokio floor above, these are minimum
# versions; lockfile bumps inside a minor flow through `cargo update`.
#
# We rely on tokio-rustls's default crypto provider selection (currently
# aws-lc-rs). Callers who need to install their own CryptoProvider can
# do so before constructing a transport.
tokio-rustls = "0.26"
rustls-pki-types = "1.7"
# Trust-anchor sources. Both are optional and gated by feature flags
# in `wasm-smtp-tokio`.
rustls-native-certs = "0.7"
webpki-roots = "0.26"
