[package]
name = "wasm-smtp-cloudflare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cloudflare Workers socket adapter for wasm-smtp-core."
readme = "../../README.md"
keywords = ["smtp", "email", "cloudflare", "workers", "wasm"]
categories = ["email", "network-programming", "wasm"]

[lib]
path = "src/lib.rs"

[features]
# Pass-through `xoauth2` to wasm-smtp-core. Default-on to match
# wasm-smtp-core's default and preserve v0.3.x behaviour for callers
# that depend only on this adapter crate. Disable with
# `default-features = false` if you do not need OAuth 2.0 support.
default = ["xoauth2"]

# Pass-through to wasm-smtp-core's `xoauth2` feature so callers who
# depend only on this adapter crate can disable OAuth 2.0 support
# (Gmail / Microsoft 365 SMTP submission) without referring to the
# core crate by name.
xoauth2 = ["wasm-smtp-core/xoauth2"]

# Pass-through to wasm-smtp-core's `smtputf8` feature so callers who
# depend only on this adapter crate can enable SMTPUTF8 without
# referring to the core crate by name.
smtputf8 = ["wasm-smtp-core/smtputf8"]

[dependencies]
wasm-smtp-core = { path = "../core", version = "0.5.0", default-features = false }
worker = "0.8"
tokio = { version = "1", default-features = false, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt"] }
tokio-test = "0.4"

[lints]
workspace = true
