[package]
name = "wasm-smtp-cloudflare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cloudflare Workers socket adapter for wasm-smtp."
readme = "../../README.md"
keywords = ["smtp", "email", "cloudflare", "workers", "wasm"]
categories = ["email", "network-programming", "wasm"]

[lib]
path = "src/lib.rs"

[features]
# Pass-through `xoauth2` to wasm-smtp. Default-on to match wasm-smtp's
# default and preserve v0.3.x behaviour for callers that depend only on
# this adapter crate. Disable with `default-features = false` if you do
# not need OAuth 2.0 support.
default = ["xoauth2"]

# Pass-through to wasm-smtp's `xoauth2` feature so callers who depend
# only on this adapter crate can enable XOAUTH2 without referring to
# the main crate by name.
xoauth2 = ["wasm-smtp/xoauth2"]

# Pass-through to wasm-smtp's `smtputf8` feature so callers who
# depend only on this adapter crate can enable SMTPUTF8 without
# referring to the main crate by name.
smtputf8 = ["wasm-smtp/smtputf8"]

[dependencies]
wasm-smtp = { path = "../wasm-smtp", version = "0.9.1", default-features = false }
worker = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }
tokio-test = { workspace = true }

[lints]
workspace = true
