[package]
name = "wasm-smtp-cloudflare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cloudflare Workers socket adapter for wasm-smtp."
readme = "../../README.md"
keywords = ["smtp", "email", "cloudflare", "workers", "wasm"]
categories = ["email", "network-programming", "wasm"]

[lib]
path = "src/lib.rs"

[features]
# Pass-through to wasm-smtp's defaults. `xoauth2` and `scram-sha-256`
# are enabled by default to match wasm-smtp's defaults and preserve
# v0.3.x behaviour for callers that depend only on this adapter crate.
# Disable with `default-features = false` if you do not need them.
default = ["xoauth2", "scram-sha-256"]

# Pass-through to wasm-smtp's `xoauth2` feature so callers who depend
# only on this adapter crate can enable XOAUTH2 without referring to
# the main crate by name.
xoauth2 = ["wasm-smtp/xoauth2"]

# Pass-through to wasm-smtp's `smtputf8` feature so callers who
# depend only on this adapter crate can enable SMTPUTF8 without
# referring to the main crate by name.
smtputf8 = ["wasm-smtp/smtputf8"]

# Pass-through to wasm-smtp's `mail-builder` feature.
mail-builder = ["wasm-smtp/mail-builder"]

# Pass-through to wasm-smtp's `scram-sha-256` feature, with the WASM
# JS backend additionally enabled on `wasm32-unknown-unknown` (the
# Cloudflare Workers target). Without this, getrandom 0.4 fails to
# compile on that target. Note that callers ALSO need to set
# `RUSTFLAGS='--cfg getrandom_backend="wasm_js"'` at build time —
# see the crate README for the full deployment recipe.
scram-sha-256 = ["wasm-smtp/scram-sha-256", "dep:getrandom"]

[dependencies]
wasm-smtp = { path = "../wasm-smtp", version = "0.9.3", default-features = false }
worker = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }

# getrandom is pulled in only when the `scram-sha-256` feature is
# enabled (transitively via wasm-smtp). We re-declare it here so we
# can opt into the `wasm_js` cargo feature for `wasm32-unknown-unknown`
# targets. The dep is `optional = true` because it is only needed
# when scram-sha-256 is on.
getrandom = { workspace = true, optional = true, features = ["wasm_js"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }
tokio-test = { workspace = true }

[lints]
workspace = true
