[package]
name = "wasm-smtp-tokio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tokio + rustls socket adapter for wasm-smtp."
readme = "../../README.md"
keywords = ["smtp", "email", "tokio", "rustls", "tls"]
categories = ["email", "network-programming", "asynchronous"]

[lib]
path = "src/lib.rs"

[features]
# By default we ship system-trust-anchor support via rustls-native-certs.
# Containerised deployments and minimal images may prefer the bundled
# Mozilla root set from webpki-roots: opt out of `native-roots` and
# opt in to `webpki-roots` instead.
default = ["native-roots"]
native-roots = ["dep:rustls-native-certs"]
webpki-roots = ["dep:webpki-roots"]
# Pass-through to wasm-smtp's `xoauth2` feature (Gmail / Microsoft 365).
xoauth2 = ["wasm-smtp/xoauth2"]
# Pass-through to wasm-smtp's `smtputf8` feature (international addresses).
smtputf8 = ["wasm-smtp/smtputf8"]

[dependencies]
wasm-smtp = { path = "../wasm-smtp", version = "0.7.1", default-features = false }
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-native-certs = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-test = { workspace = true }

[lints]
workspace = true
