[package]
name = "wasm-smtp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Environment-independent SMTP client core for WASM and other constrained runtimes."
readme = "../../README.md"
keywords = ["smtp", "email", "wasm", "client", "async"]
categories = ["email", "network-programming", "wasm"]

[lib]
path = "src/lib.rs"

[features]
# Default features. `xoauth2` and `scram-sha-256` are enabled by default
# because they represent the modern, secure authentication mechanisms;
# callers that do not need them can disable with `default-features = false`
# to shave protocol logic and crypto dependencies from their build.
default = ["xoauth2", "scram-sha-256"]

# SMTPUTF8 (RFC 6531) — international (UTF-8) addresses in MAIL FROM /
# RCPT TO. Off by default: the feature is a niche opt-in, and disabling
# it shaves a few KB from the WASM bundle in size-constrained
# deployments (Cloudflare Workers' 3 MiB cap).
#
# When enabled, exposes `SmtpClient::send_mail_smtputf8` plus the
# `validate_address_utf8`, `format_mail_from_smtputf8`, and
# `ehlo_advertises_smtputf8` helpers in `protocol`. The default
# `send_mail` continues to enforce the strict ASCII-address rule
# regardless of this feature.
smtputf8 = []

# AUTH XOAUTH2 (Google / Microsoft OAuth 2.0 SASL profile). On by
# default for backwards compatibility. When disabled, removes
# `SmtpClient::login_xoauth2`, the `XOAuth2` arm of `login_with`,
# and the `protocol::build_xoauth2_initial_response` /
# `validate_xoauth2_user` / `validate_oauth2_token` helpers.
#
# The `AuthMechanism::XOAuth2` and `SmtpOp::AuthXOAuth2` enum
# variants remain present in either configuration (both enums are
# `non_exhaustive`), so disabling this feature is not a SemVer-
# breaking change for code that pattern-matches with a wildcard
# arm.
xoauth2 = []

# AUTH SCRAM-SHA-256 (RFC 5802) — challenge-response SASL mechanism
# that does not transmit the password in plaintext. Default-on
# because:
#
# - SCRAM is the modern preferred SASL mechanism for SMTP
#   submission; PLAIN/LOGIN remain only for legacy server
#   compatibility.
# - The auto-mechanism-selection in `SmtpClient::login` prefers
#   SCRAM-SHA-256 when both client and server support it; disabling
#   this feature silently degrades to PLAIN/LOGIN, which is exactly
#   the wrong default for security-conscious callers.
#
# Adds `hmac`, `sha2`, `pbkdf2`, `getrandom`, and `subtle` to the
# dependency tree (~150 KB compressed binary impact). Disable via
# `default-features = false` when binary size matters more than
# the strongest available authentication.
#
# Note: this feature implements `SCRAM-SHA-256` only, NOT
# `SCRAM-SHA-256-PLUS` (channel binding). The latter requires
# extracting binding tokens from the TLS implementation, which is
# out of scope for the current adapter contract.
scram-sha-256 = [
    "dep:hmac",
    "dep:sha2",
    "dep:pbkdf2",
    "dep:getrandom",
    "dep:subtle",
]

# mail-builder integration: convenience method `SmtpClient::send_message`
# accepting `mail_builder::MessageBuilder` directly. Off by default
# because `mail-builder` is a real (though tiny, no-deps) dependency
# and most callers either use the manual `send_mail` path or compose
# their own message bodies. Enable when you want to skip the
# `MessageBuilder::write_to_string` call.
#
# When disabled, `send_message` is not compiled and `mail-builder` is
# not pulled into the dependency graph at all.
mail-builder = ["dep:mail-builder"]

[dependencies]
mail-builder = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

[lints]
workspace = true
